# embassy_pg

./: .gitignore  .gitmodules
usb/: Cargo.toml  build.rs  mavlink_test.py  openocd.cfg  openocd.gdb
usb/.cargo/: config.toml
usb/board/: Cargo.toml
usb/board/src/: lib.rs
usb/board/src/disco407/: memory.x  mod.rs
usb/board/src/matekh743/: mod.rs
usb/src/: board.rs  main.rs  mavlink_ops.rs  traits.rs  usb.rs
