[package]
name = "board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-stm32 = { version = "0.1.0", path="../../embassy/embassy-stm32", features = ["nightly", "defmt", "time-driver-any", "exti", "unstable-pac", "unstable-traits"]}
static_cell = "1.0"

[features]
default = []
matekh743 = ["embassy-stm32/stm32h743vi"]
f407-disco = ["embassy-stm32/stm32f407vg"]
